@@ -12,7 +12,15 @@
 	"attributes": {
 		"displaycaseable": true,
 		"shelvable": true,
-		"handbook": { "groupBy": [ "gelatin-*" ] },
+		"handbook": { 
+          "groupBy": [ "gelatin-*" ],
+          "extraSections": [
+            {
+              "title": "expandedfoods:item-handbooktitle-gelatin",
+              "text": "expandedfoods:item-handbooktext-gelatin"
+            }
+          ]
+        },
 		"waterTightContainerPropsByType": {
 			"*-liquid": {
 				"containable": true,
@@ -56,7 +64,7 @@
 		"*-honey": { "saturation": 200, "health": 3.5, "foodcategory": "Fruit" },
 		"*-soy": { "saturation": 200, "health": 3, "foodcategory": "Protein" },
 		"*-plain": { "saturation": 150, "health": 1, "foodcategory": "Protein" },
-		"*": { "saturation": 200, "health": 3, "foodcategory": "Protein" }
+		"*": { "saturation": 200, "health": 3, "foodcategory": "Fruit" }
 	},
 	"creativeinventory": { "general": ["*"], "items": ["*"], "expandedfoods": ["*"] },
 	"maxstacksizeByType": {
