@@ -121,6 +121,9 @@
   "item-fishnugget-tendercharred": "Tender fish fillet (charred)",
   "item-fishnugget-curedsmashed": "Cured tender fish fillet",
   "item-fishnugget-curedchopped": "Cured fish nuggets",
+  "item-handbooktitle-fishnugget": "Preparing Fish",
+  "item-handbooktext-fishnugget": "Fish, like any meat, can be tenderized via direct blunt force. Doing so makes it tastier and easier to digest. Chopped fish nuggets can be used in more foods and meals than smashed fish fillets.",
+
 
   "item-trailmix-fruity": "Fruity trail mix",
   "item-trailmix-nutty": "Nutty trail mix",
@@ -4375,6 +4378,9 @@
   "itemdesc-gelatin-soy": "It's VERY savory...",
   "itemdesc-gelatin-liquid": "Congealed bone juice. Cook it with bones to solidify it more.",
   "itemdesc-gelatin-raw": "Mostly solid gelatin that should be cooked with water and other liquids.",
+  "item-handbooktitle-gelatin": "Gelatin Production",
+  "item-handbooktext-gelatin": "First, simmer bones in water to start releasing the collagens and make <a href=\"handbook://item-expandedfoods:brothportion-bone\">bone broth</a>. Take that bone broth and simmer it with more bones to start gelatinizing it and reducing its proteins into peptides, creating <a href=\"handbook://item-expandedfoods:gelatin-liquid\">pre-gelatin</a>. Finally, simmer pre-gelatin with more bones to create <a href=\"handbook://item-expandedfoods:gelatin-raw\">raw gelatin</a>, a flavorless hydrogel. At this point, it can be simmered with any juice or syrup to make <a href=\"handbook://item-expandedfoods:gelatin-saguaro\">flavored gelatin</a>.",
+
 
   "incontainer-item-gelatin-liquid": "Pre-gelatin",
   "game:incontainer-item-gelatin-liquid": "Pre-gelatin",
