@@ -99,6 +99,7 @@ REBALANCING:
 - Cheese in meal patched removed; now handled in vanilla - DONE!!!
 - Dried seaweed production chain lengthened; now it must be washed and dried before roasting in the oven - DONE!!!
 - Dried seaweed nutrition buffed from 20 to 30; nutritionPropsWhenInMeal buffed from 30 to 45 - DONE!!!
+- Default gelatin nutrition turned from Protein back to Fruit - DONE!!!
 
 BUG FIXES:
 - Primitive survival meat patches corrected for meals (cold pasta specifically)
